--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -2,68 +2,325 @@ name: Build Firmware
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [ main, develop ]
+    tags:
+      - 'v*'  # Trigger on version tags (v1.0.0, v2.1.3, etc.)
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
-  build:
+  check-container:
+    name: Check if container build needed
     runs-on: ubuntu-latest
-
+    permissions:
+      packages: write
+    outputs:
+      container_name: ${{ steps.container-info.outputs.container_name }}
+      build_needed: ${{ steps.container-info.outputs.build_needed }}
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-      with:
-        submodules: recursive
+      - uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Log in to container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: |
-        docker build -t efr32mg1-sed-builder:latest .
+      - name: Determine container info
+        id: container-info
+        run: |
+          IMAGE_NAME=$(echo ${{ github.repository }} | awk '{print tolower($0)}')
+          TAG_NAME=$(echo "${{ hashFiles('Dockerfile') }}" | cut -c-16)
+          CONTAINER_NAME="${{ env.REGISTRY }}/${IMAGE_NAME}:${TAG_NAME}"
 
-    - name: Build firmware in Docker
-      run: |
-        docker run --rm \
-          -v ${{ github.workspace }}/build:/workspace/build \
-          efr32mg1-sed-builder:latest
+          echo "container_name=$CONTAINER_NAME" >> $GITHUB_OUTPUT
 
-    - name: List build artifacts
-      run: |
-        echo "=== Build Artifacts ==="
-        find build -type f \( -name "*.hex" -o -name "*.bin" -o -name "*.s37" \) -ls
+          # Check if container already exists
+          if docker manifest inspect "$CONTAINER_NAME" > /dev/null 2>&1; then
+            echo "build_needed=false" >> $GITHUB_OUTPUT
+            echo "Container already exists: $CONTAINER_NAME"
+          else
+            echo "build_needed=true" >> $GITHUB_OUTPUT
+            echo "Container needs to be built: $CONTAINER_NAME"
+          fi
 
-    - name: Upload debug artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: firmware-debug
-        path: |
-          build/debug/*.hex
-          build/debug/*.bin
-          build/debug/*.s37
-        if-no-files-found: error
+  build-container:
+    name: Build Docker container
+    needs: check-container
+    if: needs.check-container.outputs.build_needed == 'true'
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
 
-    - name: Upload release artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: firmware-release
-        path: |
-          build/release/*.hex
-          build/release/*.bin
-          build/release/*.s37
-        if-no-files-found: error
+      - name: Log in to container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Create release (on tag)
-      if: startsWith(github.ref, 'refs/tags/v')
-      uses: softprops/action-gh-release@v1
-      with:
-        files: |
-          build/release/*.hex
-          build/release/*.bin
-          build/release/*.s37
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          file: Dockerfile
+          push: true
+          tags: ${{ needs.check-container.outputs.container_name }}
+          cache-from: type=registry,ref=${{ needs.check-container.outputs.container_name }}-cache
+          cache-to: type=registry,ref=${{ needs.check-container.outputs.container_name }}-cache,mode=max
+
+  build-firmware:
+    name: Build firmware - EFR32MG1 SED
+    needs: [check-container, build-container]
+    if: always() && needs.check-container.result == 'success'
+    runs-on: ubuntu-latest
+    permissions:
+      packages: read
+    container:
+      image: ${{ needs.check-container.outputs.container_name }}
+      options: --user root
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build firmware
+        run: |
+          # Fix git ownership issue in container
+          git config --global --add safe.directory "$GITHUB_WORKSPACE"
+
+          # Set HOME to /root where Silicon Labs tools are installed
+          export HOME=/root
+
+          # Set environment variables
+          export GSDK_DIR=/gecko_sdk_4.5.0
+
+          # Find and add GCC to PATH (CRITICAL for build)
+          echo "Looking for GCC ARM toolchain..."
+
+          # Find GCC package directory
+          GCC_PKG=$(find /root/.silabs/slt/installs/conan/p -maxdepth 1 -type d -name "gcc-*" 2>/dev/null | grep -v "gcc-a51b5" | head -1)
+
+          if [ -z "$GCC_PKG" ]; then
+            echo "ERROR: GCC package not found!"
+            echo "Available packages:"
+            ls -la /root/.silabs/slt/installs/conan/p/ | grep gcc
+            exit 1
+          fi
+
+          GCC_BIN="$GCC_PKG/p/bin"
+
+          if [ ! -d "$GCC_BIN" ]; then
+            echo "ERROR: GCC bin directory not found at: $GCC_BIN"
+            echo "Contents of GCC package:"
+            ls -la "$GCC_PKG/p/" || ls -la "$GCC_PKG/"
+            exit 1
+          fi
+
+          echo "Found GCC at: $GCC_BIN"
+          export PATH="$GCC_BIN:$PATH"
+
+          # Verify GCC is accessible
+          echo "Verifying GCC..."
+          if "$GCC_BIN/arm-none-eabi-gcc" --version > /dev/null 2>&1; then
+            echo "✓ GCC is executable"
+            "$GCC_BIN/arm-none-eabi-gcc" --version | head -1
+          else
+            echo "ERROR: Cannot execute arm-none-eabi-gcc!"
+            file "$GCC_BIN/arm-none-eabi-gcc"
+            ldd "$GCC_BIN/arm-none-eabi-gcc" 2>&1 | head -20
+            exit 1
+          fi
+
+          echo "✓ SLC: $(which slc || echo '/root/.silabs/slt/bin/slc')"
+          echo "✓ Building EFR32MG1 SED with SHT31"
+
+          # Run build script
+          bash tools/build.sh
+
+      - name: Verify Basic identity attributes
+        if: success()
+        shell: bash
+        run: |
+          set -euo pipefail
+          mapfile -t SEARCH_DIRS < <(find build -type d -name autogen 2>/dev/null)
+          if [ ${#SEARCH_DIRS[@]} -eq 0 ]; then
+            echo "ERROR: no autogen directories found under build/"
+            find build -maxdepth 4 -type d 2>/dev/null || true
+            exit 1
+          fi
+          echo "Searching Basic attributes in:"
+          printf '  - %s\n' "${SEARCH_DIRS[@]}"
+          mapfile -d '' ZAP_FILES < <(find "${SEARCH_DIRS[@]}" -type f -name "zap-*" -print0)
+          if [ ${#ZAP_FILES[@]} -eq 0 ]; then
+            echo "ERROR: no zap-* files found under autogen directories"
+            exit 1
+          fi
+          if command -v rg >/dev/null 2>&1; then
+            rg -q -g "zap-*" "0x0004" "${SEARCH_DIRS[@]}" || { echo "ERROR: Missing Manufacturer Name (0x0004)"; exit 1; }
+            rg -q -g "zap-*" "0x0005" "${SEARCH_DIRS[@]}" || { echo "ERROR: Missing Model Identifier (0x0005)"; exit 1; }
+            rg -q -g "zap-*" "0x4000" "${SEARCH_DIRS[@]}" || { echo "ERROR: Missing SW Build ID (0x4000)"; exit 1; }
+          else
+            printf '%s\0' "${ZAP_FILES[@]}" | xargs -0 grep -q -- "0x0004" || { echo "ERROR: Missing Manufacturer Name (0x0004)"; exit 1; }
+            printf '%s\0' "${ZAP_FILES[@]}" | xargs -0 grep -q -- "0x0005" || { echo "ERROR: Missing Model Identifier (0x0005)"; exit 1; }
+            printf '%s\0' "${ZAP_FILES[@]}" | xargs -0 grep -q -- "0x4000" || { echo "ERROR: Missing SW Build ID (0x4000)"; exit 1; }
+          fi
+          echo "OK: Basic identity attributes present"
+
+      - name: List build outputs
+        if: always()
+        run: |
+          echo "Build directory contents:"
+          find build -type f 2>/dev/null || echo "No build directory"
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v4
+        if: success()
+        with:
+          name: firmware-efr32mg1-sed-${{ github.sha }}
+          path: |
+            build/**/*.out
+            build/**/*.hex
+            build/**/*.bin
+            build/**/*.s37
+            build/**/*.map
+            build/**/*.axf
+            autogen/**
+          retention-days: 30
+          if-no-files-found: error
+
+      - name: Build summary
+        if: success()
+        run: |
+          echo "## ✅ Build Successful - EFR32MG1 SED" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Board**: EFR32MG1P132F256GM32 (TRADFRI-compatible)" >> $GITHUB_STEP_SUMMARY
+          echo "**Sensor**: SHT31 (Temperature + Humidity)" >> $GITHUB_STEP_SUMMARY
+          echo "**SLCP**: efr32mg1-sed.slcp" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Build Artifacts" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          find build -type f \( -name "*.out" -o -name "*.hex" -o -name "*.bin" -o -name "*.s37" \) -exec ls -lh {} \; 2>/dev/null | awk '{print $9, $5}' || echo "No files found"
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Memory Usage" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          find build -name "*.axf" -exec arm-none-eabi-size {} \; 2>/dev/null || echo "No ELF found"
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "🐳 Built with Silicon Labs slt tooling" >> $GITHUB_STEP_SUMMARY
+
+  release:
+    name: Upload artifacts to release
+    needs: [build-firmware]
+    if: always() && needs.build-firmware.result == 'success' && startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Download firmware artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: firmware-efr32mg1-sed-${{ github.sha }}
+          path: artifacts/firmware
+
+      - name: Create release package
+        run: |
+          # Extract version from tag
+          VERSION="${GITHUB_REF_NAME#v}"
+          echo "Creating release package for version: $VERSION"
+
+          # Create release directory structure
+          mkdir -p release/firmware
+
+          # Copy firmware files
+          find artifacts/firmware -name "*.hex" -exec cp {} release/firmware/ \;
+          find artifacts/firmware -name "*.s37" -exec cp {} release/firmware/ \;
+          find artifacts/firmware -name "*.out" -exec cp {} release/firmware/ \;
+          find artifacts/firmware -name "*.bin" -exec cp {} release/firmware/ \;
+
+          # Create README for release
+          cat > release/README.txt <<EOF
+          EFR32MG1 Zigbee SED with SHT31 - Release ${VERSION}
+          ====================================================
+
+          Board: EFR32MG1P132F256GM32 (TRADFRI-compatible module)
+          Sensor: SHT31 Temperature + Humidity (I2C)
+          Battery: 2x AA batteries
+
+          Files:
+          ------
+          firmware/     - Application firmware (.hex, .s37, .bin)
+
+          Installation:
+          ------------
+          1. Flash application firmware: efr32mg1-sed.s37
+          2. Connect via serial console (115200 baud) to see output
+          3. Press BTN0 to join Zigbee network
+
+          Features:
+          ---------
+          - Sleepy End Device with fast poll window for stable interview
+          - Temperature and Humidity measurement
+          - Battery voltage monitoring
+          - Button control (short/long press)
+          - Configurable attribute reporting
+
+          Documentation: https://github.com/${GITHUB_REPOSITORY}
+          EOF
+
+          # Create ZIP archive
+          cd release
+          zip -r ../efr32mg1-sed-v${VERSION}.zip .
+          cd ..
+
+          ls -lh *.zip
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            efr32mg1-sed-*.zip
+            release/firmware/*.hex
+            release/firmware/*.s37
+            release/firmware/*.bin
+          fail_on_unmatched_files: false
+          body: |
+            ## EFR32MG1 Zigbee SED with SHT31 Sensor
+
+            ### What's New
+            See commit history for details.
+
+            ### Installation
+
+            **Flashing:**
+            1. Flash the application: `efr32mg1-sed.s37`
+            2. Power cycle the device
+            3. Press BTN0 to join network
+
+            ### Hardware
+            - **Board**: EFR32MG1P132F256GM32 (TRADFRI-compatible)
+            - **Sensor**: SHT31 (I2C on PC10/PC11)
+            - **Button**: PB13 (Pin 19)
+            - **LED**: PA0 (Pin 2)
+            - **Battery**: 2x AA
+
+            ### Features
+            - Temperature measurement (-40 to 125°C)
+            - Humidity measurement (0-100%)
+            - Battery voltage and percentage
+            - Fast poll window for stable ZHA/Zigbee2MQTT interview
+            - Button control (join, read, leave)
+            - Configurable reporting intervals
+
+            📦 Download the ZIP file for a complete package with all firmware files.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
